compiler/testData/multiplatform/incompatibleFunctions/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:1:16: error: 'actual fun Int.plus(s: CharSequence): Int' has no corresponding expected declaration
The following declaration is incompatible because some modifiers on expected declaration are missing on the actual one (infix, inline, operator):
    expect fun Int.plus(s: CharSequence): Int

actual fun Int.plus(s: CharSequence): Int = 0
               ^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:3:19: error: 'actual fun Double.times(x: CharArray): Unit' has no corresponding expected declaration
The following declaration is incompatible because some modifiers on expected declaration are missing on the actual one (infix, inline, operator):
    expect fun Double.times(x: CharArray): Unit

actual fun Double.times(x: CharArray) {}
                  ^
compiler/testData/multiplatform/incompatibleFunctions/jvm.kt:5:12: error: 'actual fun f1(): Unit' has no corresponding expected declaration
The following declaration is incompatible because some modifiers on expected declaration are missing on the actual one (infix, inline, operator):
    expect fun f1(): Unit

actual fun f1() {}
           ^
